--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "handlebars": "^4.0.10",
     "jquery": "^3.2.1",
-    "mongoose": "^4.11.13"
+    "mongoose": "^4.11.13",
+    "socket.io": "^2.0.3"
   }
 }
