--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/dude439/get-inline#readme",
   "dependencies": {
+    "animate.css": "^3.5.2",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "express": "^4.15.5",
